--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
@@ -37,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-resizable-panels": "^3.0.2",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uploadthing": "^7.7.2"
   },
