--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-resizable-panels": "^3.0.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
-    "uploadthing": "^7.7.2"
+    "uploadthing": "^7.7.2",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
