--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.81.2",
     "@uploadthing/react": "^7.3.1",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
